crates/services/src/pipeline/snapshots/quant_services__pipeline__tests__snapshot_pipeline_exec_fails_after_risk_pass.snap
---
source: crates/services/src/pipeline/tests.rs
expression: err
---
ExecutionFailed: "Order execution rejected: test execution rejection"
