crates/services/src/pipeline/snapshots/quant_services__pipeline__tests__snapshot_pipeline_risk_rejected_stops_pipeline.snap
---
source: crates/services/src/pipeline/tests.rs
expression: err
---
RiskRejected: "Risk check failed: test rejection"
